Fix layout bug

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -623,7 +623,7 @@ header {
     background-color: #fff;
     border-radius: 3px;
     padding: 3px 10px;
-    font-size: 1.4em; }
+    font-size: 14; }
 .content pre {
   font-size: 14px; }
   .content pre.line-numbers .line-number {
