--- a/public/css/view.scss
+++ b/public/css/view.scss
@@ -117,7 +117,7 @@
 			background-color: #fff;
 			border-radius: 3px;
 			padding: 3px 10px;
-			font-size: 1.4em;
+			font-size: 14px;
 		}
 	}
 
